samples/_failures_safe/1761081959_4a4c4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bab86512.c: In function ‘main’:
./samples/SAFE/__tmp_bab86512.c:131:19: error: missing terminating " character
  131 |         if (scanf("%02x
      |                   ^~~~~
./samples/SAFE/__tmp_bab86512.c:131:9: error: expected expression at end of input
  131 |         if (scanf("%02x
      |         ^~
./samples/SAFE/__tmp_bab86512.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bab86512.c:131:9: error: expected declaration or statement at end of input
